2-5
-Created `SingleLimitMotor` to use a single limit switch with a motor.
-Created `OpenNet` and `CloseNet` to open and close the nets.
-Created `ToggleMotor` to turn a `SingleLimitMotor` 180 degrees.
-Added a time constraint to `ToggleMotor` that defaults to 5 seconds if not specified.

-Inverted the pressure switch in `Compressor`.